--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,44 +1,46 @@
+.product-list-container {
+  padding: 0 20px; /* Add padding to both sides */
+}
+
 .product-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    padding: 20px;
-  }
-  
-  .product-card {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    width: 200px;
-    text-align: center;
-  }
-  
-  .product-card img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .product-card h3 {
-    font-size: 18px;
-    margin: 10px 0;
-  }
-  
-  .product-card p {
-    font-size: 14px;
-    margin: 5px 0;
-  }
-  
-  .product-card button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .product-card button:hover {
-    background-color: #0056b3;
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* Always display four columns */
+  gap: 20px;
+  justify-content: center;
+  padding: 20px 0; /* Padding on top and bottom */
+}
+
+.product-card {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+
+.product-card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.product-card h3 {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.product-card p {
+  font-size: 14px;
+  margin: 5px 0;
+}
+
+.product-card button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.product-card button:hover {
+  background-color: #0056b3;
+}
