--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,19 +1,20 @@
 .product-list-container {
-  padding: 20px 20px; /* Add padding to all sides */
+  padding: 20px; /* Add padding to all sides */
 }
 
 .product-card {
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 20px;
-  margin-bottom: 20px;
   text-align: center;
   background-color: #f9f9f9;
+  height: 100%;
 }
 
-.product-card img {
+.product-card .product-image {
   max-width: 100%;
-  height: auto;
+  height: 170px;
+  margin-bottom: 15px;
 }
 
 .product-card h3 {
