--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,11 @@
 .cat-icon{
     width: 20px;
     height:auto;
+    font-weight: bold;
+}
+#home{
+    color: black;
+}
+.logo{
+ font-weight: bold;
 }
